--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
                 #02aaec10,
                 #02aaec76,
                 #02abec
-            ), blue;
+            ), black;
     color: #ebecf0;
     padding: 15px 6%;
 }
@@ -98,7 +98,7 @@ a {
 .main .btns .btn {
     display: inline-block;
     width: 150px;
-    font-size: 160x;
+    font-size: 16px;
     font-weight: 600;
     text-align: center;
     border: 2px solid #02abec;
