--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
                 #02aaec10,
                 #02aaec76,
                 #02abec
-            ), black;
+            ), rgb(88, 84, 84);
     color: #ebecf0;
     padding: 15px 6%;
 }
